<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/case_files_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_app_full">


    <ImageView
            android:id="@+id/img_Case_Paper"
            android:layout_width="@dimen/paper_width"
            android:layout_height="@dimen/paper_height"
            android:src="@drawable/paper_inner"
            android:scaleType="centerCrop"
            android:alpha="0.67"
            android:contentDescription="@string/case_files_paper_desc"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintVertical_bias="0.169" />

    <TextView
            android:id="@+id/tv_case_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/case_files_title"
            android:textColor="@color/text_primary"
            android:fontFamily="@font/roboto_slab_regular"
            android:textStyle="bold"
            android:textSize="@dimen/text_size_hero_title"
            app:layout_constraintTop_toTopOf="@id/img_Case_Paper"
            app:layout_constraintStart_toStartOf="@id/img_Case_Paper"
            app:layout_constraintEnd_toEndOf="@id/img_Case_Paper"
            android:layout_marginTop="@dimen/margin_xxl" />

    <TextView
            android:id="@+id/tv_case_subtitle"
            android:layout_width="@dimen/paper_text_width"
            android:layout_height="@dimen/paper_text_height"
            android:text="@string/case_files_subtitle"
            android:textColor="@color/text_primary"
            android:fontFamily="@font/roboto_slab_light"
            android:textSize="@dimen/text_size_subtitle"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/tv_case_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/spacing_s"
            android:layout_marginStart="@dimen/spacing_l"
            android:layout_marginEnd="@dimen/spacing_l" />

</androidx.constraintlayout.widget.ConstraintLayout>